# Sudoku

./: .gitignore  CMakeLists.txt  README.md
sudoku/: CMakeLists.txt  decompose_functions.cc  identify_bits.cc  reverse_functions.cc  sudoku.cc  sudoku.h  sudoku_addressing.cc  sudoku_addressing.h  validate_mapping.cc
sudoku/internal/: CMakeLists.txt  amd_ryzen_zen4_ddr5.h  assembly.h  config.cc  config.h  conflicts.cc  conflicts.h  consecutive_accesses.cc  consecutive_accesses.h  constants.h  intel_core_12th_ddr4.h  intel_core_12th_ddr5.h  intel_core_14th_ddr5.h  pool.cc  pool.h  refreshes.cc  refreshes.h  utils.cc  utils.h
sudoku/testing/: CMakeLists.txt  watch_conflicts.cc  watch_consecutive_accesses.cc  watch_refreshes.cc
